--- a/src/Resources/views/storefront/narrative/element/cms-element-product-listing.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-product-listing.html.twig
@@ -52,7 +52,7 @@ uses a loop through Boxalino response blocks (block.blocks) to render the other 
     {% endif %}
 
     {% block element_product_listing_wrapper %}
-        <div class="cms-element-product-listing-wrapper"
+        <div class="cms-element-product-listing-wrapper  rtux-element-product-listing-wrapper"
              data-listing-pagination="true"
              data-listing="true"
              data-listing-options='{
