--- a/src/Resources/views/storefront/narrative/element/cms-element-sidebar-filter.html.twig
+++ b/src/Resources/views/storefront/narrative/element/cms-element-sidebar-filter.html.twig
@@ -36,7 +36,7 @@ If you wish the default Shopware6 facets feature (facets to be constant) - use d
 {% endif %}
 
 {% block element_filter_listing_wrapper %}
-    <div class="cms-element-product-listing-wrapper"
+    <div class="cms-element-product-listing-wrapper rtux-element-product-listing-wrapper"
          data-listing="true"
          data-listing-options='{
              "sidebar": "true",
@@ -50,7 +50,7 @@ If you wish the default Shopware6 facets feature (facets to be constant) - use d
          }'>
 
         {% block element_product_listing_wrapper_content %}
-            <div class="cms-element-product-listing">
+            <div class="cms-element-product-listing rtux-element-content-listing">
                 {% for bxblock in block.blocks %}
                     {% set narrativeContent = {'block' : bxblock, 'sidebar': sidebar, 'currencySymbol': currencySymbol} %}
                     {% sw_include bxblock.template with narrativeContent %}
